--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
