--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.27.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^4.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
@@ -20,6 +21,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "style-helpers": "^1.0.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.5.2"
   },
